@@ -1,6 +1,6 @@
 noinst_LTLIBRARIES = libjabberdsmmods.la
 
-libjabberdsmmods_la_SOURCES = mod_admin.c mod_agents.c mod_announce.c mod_auth_crypt.c mod_auth_digest.c mod_auth_plain.c mod_browse.c mod_disco.c mod_echo.c mod_example.c mod_filter.c mod_groups.c mod_last.c mod_log.c mod_offline.c mod_presence.c mod_register.c mod_roster.c mod_stat.c mod_time.c mod_vcard.c mod_version.c mod_xml.c
+libjabberdsmmods_la_SOURCES = mod_admin.c mod_agents.c mod_announce.c mod_auth_crypt.c mod_auth_digest.c mod_auth_plain.c mod_browse.c mod_disco.c mod_echo.c mod_example.c mod_filter.c mod_groups.c mod_last.c mod_log.c mod_offline.c mod_presence.c mod_register.c mod_roster.c mod_stat.c mod_time.c mod_useridpolicy.c mod_vcard.c mod_version.c mod_xml.c
 libjabberdsmmods_la_LIBADD = -lexpat
 libjabberdsmmods_la_LDFLAGS = @LDFLAGS@
 INCLUDES = -I../../jabberd -I../../jabberd/lib -I..
