@@ -4,6 +4,9 @@ Changes in administration of the server
     * Jabberd14 now understands the protocol between c2s and session manager
       components of jabberd2. This allows development and usage of
       c2s components for both server implementations.
+    * It is possible to block account names from being registered and
+      to enforce minimum and maximum lengths of the username on
+      registration of new accounts
 
 Changes in features visible to the user
     * Support for Flexible Offline Message Retrieval (JEP-0013)
